# FeatherOS

./: .gitignore  CMakeLists.txt  Makefile  build.sh  limine.cfg  readme.md
src/: CMakeLists.txt  Makefile
src/kernel/: CMakeLists.txt  config.h  kernel.c  kernel.cpp
src/kernel/framebuffer/: font.c  font.h  framebuffer.cpp  framebuffer.h
src/kernel/gdt/: CMakeLists.txt
src/sample/: CMakeLists.txt  sample.cpp  sample.h
toolchains/: build_toolchain.sh  x86_64.cmake
tools/: gen_font.sh
